# brocolio

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.org  algorithm.hpp  array.hpp  binary_search_tree.hpp  cmake_install.cmake  dynamic_matrix.hpp  graph.hpp  linked_list.hpp  matrix.hpp  node.hpp  ordered_pair.hpp  priority_queue.hpp  queue.hpp  simple_linked_list.hpp  simple_list_iterator.hpp  simple_node.hpp  square_matrix.hpp  stack.hpp  stopwatch.cpp  stopwatch.hpp  test.cpp  type_traits.hpp  unordered_pair.hpp  vector.hpp
include/: algorithm.hpp  array.hpp  binary_search_tree.hpp  caesar_cipher.hpp  concepts.hpp  default_delete.hpp  dynamic_matrix.hpp  graph.hpp  linked_list.hpp  memory.hpp  node.hpp  random.hpp  shared_ptr.hpp  simd.hpp  square_matrix.hpp  typenames.hpp  unique_ptr.hpp  unordered_pair.hpp  weighted_tree.hpp
src/: 1.txt  2.txt  3.txt  brute.txt  encrypted.txt  frequency_decrypt.txt  output.txt  stopwatch.cpp  test.cpp  test.jl  tmp.txt  words.txt
test/: comprobar  comprobar.c  euclid.cpp  ex.cpp  linked_list.hpp  main.cpp  node.hpp  test.R
